parse more of the DAS block
git-svn-id: https://svn.atnf.csiro.au/difx@10414 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/vex2difx/trunk/vexdatamodel/Makefile.am
+++ b/applications/vex2difx/trunk/vexdatamodel/Makefile.am
@@ -21,6 +21,8 @@ libvexdatamodel_la_SOURCES = \
 	vex_data.h \
 	vex_eop.cpp \
 	vex_eop.h \
+	vex_equipment.cpp \
+	vex_equipment.h \
 	vex_exper.cpp \
 	vex_exper.h \
 	vex_extension.cpp \
