--- a/libraries/vdifio/trunk/vlbi-vdifio.spec.in
+++ b/libraries/vdifio/trunk/vlbi-vdifio.spec.in
@@ -6,6 +6,7 @@ License: GPL3
 Group: VLBI
 BuildRoot: /var/tmp/vlbi-vdifio-@version@-buildroot
 BuildRequires: gcc >= 4.1.0
+BuildRequires: vlbi-mark6sg
 Prefix: /usr
 Source: vdifio-@version@.tar.gz
 
@@ -33,6 +34,7 @@ make
 %{_libdir}/libvdifio.so.0.0.0
 %{_libdir}/pkgconfig/vdifio.pc
 %{_includedir}/vdifio.h
+%{_includedir}/mark6gather_vdif.h
 %{_bindir}/stripVDIF
 %{_bindir}/captureUDPVDIF
 %{_bindir}/multi2singlethreadVDIF
@@ -57,7 +59,10 @@ make
 %{_bindir}/vdifbstate
 %{_bindir}/printVDIFgaps
 %{_bindir}/vdifChanSelect
-
+%{_bindir}/checkVDIF
+%{_bindir}/reorderVDIF
+%{_bindir}/splitVDIFbygap
+%{_bindir}/vdifSplitThreads
 
 %changelog
 * Tue Aug 02 2016 Walter Brisken <wbrisken@nrao.edu>
