Modernize configure.ac a bit, python3 a script, and update package build info
git-svn-id: https://svn.atnf.csiro.au/difx@10447 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/mark5access/trunk/configure.ac
+++ b/libraries/mark5access/trunk/configure.ac
@@ -34,7 +34,7 @@ AM_PROG_CC_C_O
 LT_INIT
 AM_SANITY_CHECK
 
-AC_CHECK_LIB(m, erf,,[AC_MSG_ERROR("need libm")])
+AC_SEARCH_LIBS([sqrt], [m])
 PKG_CHECK_MODULES(FFTW3, fftw3, [hasfftw=true], [hasfftw=false])
 
 AC_SUBST(FFTW3_CFLAGS)
@@ -95,5 +95,6 @@ AC_CONFIG_FILES([ \
 	doc/Makefile \
         python/Makefile \
 ])
-AC_OUTPUT
+
+AC_OUTPUT()
 
