--- a/libraries/mark5access/trunk/vlbi-mark5access.spec.in
+++ b/libraries/mark5access/trunk/vlbi-mark5access.spec.in
@@ -6,6 +6,7 @@ License: GPL3
 Group: VLBI
 BuildRoot: /var/tmp/vlbi-mark5access-@version@-buildroot
 BuildRequires: gcc >= 4.1.0
+BuildRequires: vlbi-mark6sg
 Requires: fftw3 >= 3.2.0
 Prefix: /usr
 Source: mark5access-@version@.tar.gz
@@ -59,6 +60,7 @@ make
 %{_includedir}/mark5access/mark5_stream.h
 %{_includedir}/mark5access/mark5bfile.h
 %{_includedir}/mark5access/mark5bfix.h
+%{_includedir}/mark5access/mark6gather_mark5b.h
 
 %changelog
 * Tue Aug 02 2016 Walter Brisken <wbrisken@nrao.edu>
