add initial version of evnGPS.py for download and rate-fit of EVN GPS log files
git-svn-id: https://svn.atnf.csiro.au/difx@10508 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/sites/MPIfR/Makefile.am
+++ b/sites/MPIfR/Makefile.am
@@ -3,6 +3,7 @@ SUBDIRS = \
 	difxdb/difxarchive \
 	difxdb/difxexport \
 	difxdb/prepDifx \
+	GMVA \
 	misc/getObsFiles \
 	misc/datacheckers \
 	misc/difxslurm \
