Allow for unlimited number of slots in a Mark6 unit
git-svn-id: https://svn.atnf.csiro.au/difx@10521 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/mark6meta/trunk/src/Makefile.am
+++ b/libraries/mark6meta/trunk/src/Makefile.am
@@ -5,12 +5,14 @@ h_sources = \
 	Mark6.h \
 	Mark6DiskDevice.h \
 	Mark6Meta.h \
+	Mark6Controller.h \
 	Mark6Module.h
 
 cpp_sources = \
 	Mark6.cpp \
 	Mark6DiskDevice.cpp \
 	Mark6Meta.cpp \
+	Mark6Controller.cpp \
 	Mark6Module.cpp
 
 library_includedir = $(includedir)/mark6meta
