add code for parsing the DATA table
git-svn-id: https://svn.atnf.csiro.au/difx@10549 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/python/trunk/parseDiFX/Makefile.am
+++ b/libraries/python/trunk/parseDiFX/Makefile.am
@@ -8,6 +8,7 @@ nobase_dist_parsedifxlib_SCRIPTS = \
 	Telescope.py \
 	Baseline.py \
 	Datastream.py \
+	Data.py \
 	DiFXFile.py \
 	InputFile.py \
 	VisibilityHeader.py \
