add MPIfR copy of 6-slot supporting hammer.sh and rw-remount helper script
git-svn-id: https://svn.atnf.csiro.au/difx@10591 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/sites/MPIfR/mark6/Makefile.am
+++ b/sites/MPIfR/mark6/Makefile.am
@@ -1,2 +1,1 @@
-dist_bin_SCRIPTS = difxCheckMk6Modulepresence.py m6dir2filelist.sh
-
+dist_bin_SCRIPTS = difxCheckMk6Modulepresence.py m6dir2filelist.sh m6modinit/m6modinit.py hammer/hammer.sh
