--- a/utilities/trunk/vis2screen/Makefile.am
+++ b/utilities/trunk/vis2screen/Makefile.am
@@ -1,6 +1,8 @@
 bin_PROGRAMS = printDiFX
-dist_bin_SCRIPTS = diffDiFX.py diffDiFX2.py checkDiFXViz.py plotDiFX.py plotDiFXPCal.py fringeFindDiFX.py plotDynamicSpectrum.py snipDiFX.py \
-	plotResidualSpectrum.py polswapDiFX.py polrelabelDiFX.py stripantennaDiFX.py printDiFX.py printDiFXInput.py printDiFXPCal.py replaceAntennaDiFX.py \
+dist_bin_SCRIPTS = diffDiFX.py diffDiFX2.py checkDiFXViz.py plotDiFX.py \
+	plotDiFXPCal.py fringeFindDiFX.py plotDynamicSpectrum.py snipDiFX.py \
+	plotResidualSpectrum.py polswapDiFX.py polrelabelDiFX.py stripantennaDiFX.py \
+	printDiFX.py printDiFXInput.py printDiFXPCal.py replaceAntennaDiFX.py \
 	removeNonzoomAutosDiFX.py removeZerovalAutoDiFX.py plotDiFXLogs.py
 
 AM_CXXFLAGS = $(DIFXMESSAGE_CFLAGS) $(FXCORR_CFLAGS) $(IPP_CFLAGS) 
