add mk5daemonproxy.py which bridges mk5daemon-genmachines during SLURM Mark5/6 power saving
git-svn-id: https://svn.atnf.csiro.au/difx@10709 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/sites/MPIfR/mark6/Makefile.am
+++ b/sites/MPIfR/mark6/Makefile.am
@@ -1,1 +1,1 @@
-dist_bin_SCRIPTS = difxCheckMk6Modulepresence.py m6dir2filelist.sh m6modinit/m6modinit.py hammer/hammer.sh
+dist_bin_SCRIPTS = difxCheckMk6Modulepresence.py m6dir2filelist.sh m6modinit/m6modinit.py hammer/hammer.sh mk5daemonproxy/mk5daemonproxy.py
