Update changelog, version, and requirements for DiFX-2.8
git-svn-id: https://svn.atnf.csiro.au/difx@10733 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/difxfilterbank/trunk/configure.ac
+++ b/applications/difxfilterbank/trunk/configure.ac
@@ -1,14 +1,13 @@
-AC_INIT([difxfilterbank], [0.6])
+AC_INIT([difxfilterbank], [0.7])
 
 AM_INIT_AUTOMAKE([foreign])
 
-DIFXMESSAGE_REQUIRED_VERSION=2.2.0
-DIFXMESSAGE_MAX_VERSION=7
-FXCORR_REQUIRED_VERSION=2.2
-DIFXIO_REQUIRED_VERSION=3.3.0
+DIFXMESSAGE_REQUIRED_VERSION=2.8.0
+FXCORR_REQUIRED_VERSION=2.8
+DIFXIO_REQUIRED_VERSION=3.7.0
 PKG_CHECK_MODULES(DIFXIO, difxio >= $DIFXIO_REQUIRED_VERSION)
 PKG_CHECK_MODULES(FXCORR, fxcorr >= $FXCORR_REQUIRED_VERSION)
-PKG_CHECK_MODULES(DIFXMESSAGE, [difxmessage >= $DIFXMESSAGE_REQUIRED_VERSION difxmessage < $DIFXMESSAGE_MAX_VERSION])
+PKG_CHECK_MODULES(DIFXMESSAGE, [difxmessage >= $DIFXMESSAGE_REQUIRED_VERSION])
 
 
 PKG_CHECK_MODULES(PLPLOT, plplot, [hasplplot=true], [hasplplot=false])
