--- a/utilities/trunk/misc/configure.ac
+++ b/utilities/trunk/misc/configure.ac
@@ -1,11 +1,11 @@
-AC_INIT([util_misc], [2.5] )
+AC_INIT([util_misc], [2.8])
 
 
 AM_INIT_AUTOMAKE([foreign])
 AC_PROG_CC
 AM_SANITY_CHECK
 
-
-AC_OUTPUT([ \
+AC_CONFIG_FILES([
 	Makefile \
 ])
+AC_OUTPUT()
