--- a/sites/NRAO/trunk/SniffPlots/configure.ac
+++ b/sites/NRAO/trunk/SniffPlots/configure.ac
@@ -1,16 +1,16 @@
-AC_INIT([SniffPlots], [0.995], [Walter Brisken <wbrisken@nrao.edu> and Craig Walker <cwalker@nrao.edu>])
+AC_INIT([SniffPlots], [1.0], [Walter Brisken <wbrisken@nrao.edu> and Craig Walker <cwalker@nrao.edu>])
 
 AM_INIT_AUTOMAKE([foreign])
 
 AC_PROG_F77
 AC_LANG_FORTRAN77
 
-PKG_CHECK_MODULES(RCWLIB, rcwlib >= 0.99)
-PKG_CHECK_MODULES(CITLIB, citlib >= 0.99)
+PKG_CHECK_MODULES(RCWLIB, rcwlib >= 1.0)
+PKG_CHECK_MODULES(CITLIB, citlib >= 1.0)
 
 LIBS="${LIBS} ${RCWLIB_LIBS} ${CITLIB_LIBS}  -L${PGPLOT_DIR} -lpgplot -lX11"
 
-AC_OUTPUT([ \
+AC_CONFIG_FILES([
 	Makefile \
 	clockhist/Makefile \
 	plotapd/Makefile \
@@ -19,3 +19,5 @@ AC_OUTPUT([ \
 	plotwt/Makefile \
 	utilities/Makefile \
 ])
+
+AC_OUTPUT()
