Update to Version 3 CODIF
git-svn-id: https://svn.atnf.csiro.au/difx@10805 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/codifio/trunk/trunk/configure.ac
+++ b/libraries/codifio/trunk/trunk/configure.ac
@@ -1,24 +1,25 @@
-AC_INIT([CODIFIO],[0.8],[Chris.Philips@csiro.au])
+AC_INIT([CODIFIO], [0.2], [Chris.Philips@csiro.au])
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_PREREQ([2.59])
+AC_PREREQ(2.50)
 PACKAGE_VERSION=AC_PACKAGE_VERSION
 AC_SUBST([PACKAGE_VERSION])
 AC_SUBST([LIBRARY_VERSION])
 AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_SRCDIR([src/codifio.h])
-AC_CONFIG_HEADERS([config.h])
+AM_CONFIG_HEADER([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CHECK_SIZEOF([size_t])
 AC_SYS_LARGEFILE
+AX_OPENMP
 
 AC_C_BIGENDIAN
 
 # Checks for programs.
 AC_PATH_PROG([PYTHON],[python])
 AC_PROG_CC
-LT_INIT
+AC_PROG_LIBTOOL
 
 # Checks for libraries.
 AC_CHECK_LIB(m, sqrt)
@@ -38,10 +39,9 @@ AC_CHECK_LIB(m, sqrt)
 version=AC_PACKAGE_VERSION
 AC_SUBST(version)
 
-AC_CONFIG_FILES([ \
+AC_OUTPUT([ \
 	Makefile \
 	src/Makefile \
 	utils/Makefile \
 	codifio.pc \
 ])
-AC_OUTPUT
