Backout last change
git-svn-id: https://svn.atnf.csiro.au/difx@10807 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/libraries/codifio/trunk/configure.ac
+++ b/libraries/codifio/trunk/configure.ac
@@ -1,7 +1,8 @@
-AC_INIT([CODIFIO],[0.8],[Chris.Philips@csiro.au])
+AC_INIT([CODIFIO], [0.2], [Chris.Philips@csiro.au])
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
+#AC_PREREQ([2.69])
 AC_PREREQ([2.59])
 PACKAGE_VERSION=AC_PACKAGE_VERSION
 AC_SUBST([PACKAGE_VERSION])
@@ -12,6 +13,7 @@ AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CHECK_SIZEOF([size_t])
 AC_SYS_LARGEFILE
+AX_OPENMP
 
 AC_C_BIGENDIAN
 
