store a copy of Yuriis alistUVplot.py
git-svn-id: https://svn.atnf.csiro.au/difx@10850 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/sites/MPIfR/GMVA/Makefile.am
+++ b/sites/MPIfR/GMVA/Makefile.am
@@ -1,1 +1,1 @@
-dist_bin_SCRIPTS = evnGPS.py ant_rep.py gmva_vlba_archive.py
+dist_bin_SCRIPTS = evnGPS.py ant_rep.py gmva_vlba_archive.py alistUVplot.py
