--- a/sites/MPIfR/GMVA/Makefile.am
+++ b/sites/MPIfR/GMVA/Makefile.am
@@ -1,1 +1,1 @@
-dist_bin_SCRIPTS = evnGPS.py ant_rep.py gmva_vlba_archive.py alistUVplot.py
+dist_bin_SCRIPTS = evnGPS.py ant_rep.py gmva_vlba_archive.py alistUVplot.py plotAListPols.py
