--- a/libraries/python/trunk/difxplot/Makefile.am
+++ b/libraries/python/trunk/difxplot/Makefile.am
@@ -4,7 +4,8 @@ nobase_dist_parsedifxlib_SCRIPTS = \
 	__init__.py \
 	plot.py	\
 	util.py \
-	vis.py 
+	vis.py  \
+	auto.py
 
 dist_bin_SCRIPTS = \
 	difxPlot.py 	
