--- a/sites/MPIfR/mark6/mk5daemonproxy/mk5daemonproxy.service
+++ b/sites/MPIfR/mark6/mk5daemonproxy/mk5daemonproxy.service
@@ -13,7 +13,7 @@ After=beegfs-client.service
 Environment="DIFX_MESSAGE_GROUP=224.2.2.1"
 Environment="DIFX_MESSAGE_PORT=52525"
 Environment="PYTHONUNBUFFERED=1"
-ExecStart=/cluster/difx/DiFX-trunk_64/bin/mk5daemonproxy.py
+ExecStart=/cluster/difx/DiFX-trunk_64/bin/mk5daemonproxy.py -d
 ExecStop=/usr/bin/kill -9 $(/usr/bin/pgrep -f mk5daemonproxy.py)
 ExecStatus=/usr/bin/pgrep -f mk5daemonproxy.py
 Type=notify
