--- a/mpifxcorr/trunk/src/architecture.h.in
+++ b/mpifxcorr/trunk/src/architecture.h.in
@@ -72,6 +72,8 @@
 #define IPP_9_API
 #elif(IPP_VERSION_MAJOR == 2019)
 #define IPP_9_API
+#elif(IPP_VERSION_MAJOR == 2021)
+#define IPP_9_API
 #endif
 
 //start with the data types
