--- a/applications/polconvert/trunk/src/Makefile.am
+++ b/applications/polconvert/trunk/src/Makefile.am
@@ -12,7 +12,8 @@ PolConvertSources = \
 	Weighter.cpp Weighter.h \
 	_PolConvert.cpp _getAntInfo.cpp _PolGainSolve.cpp \
 	_XPCal.cpp _XPCalMF.cpp \
-	polconvert.xml setup.py task_polconvert.py
+	polconvert.xml setup.py task_polconvert.py \
+	polconvert_standalone.py polconvert_CASA.py
 PostPolScripts = PP/runpolconvert.py PP/README.POLCONVERT \
 	PP/Estimate_DPFU.py PP/DPFU_scanner.py
 ScriptCopies = runpolconvert.py README.POLCONVERT \
@@ -28,7 +29,8 @@ pkgdata_DATA = _PolConvert.so _getAntInfo.so _PolGainSolve.so \
 	_XPCal.so _XPCalMF.so \
 	PP/runpolconvert.py task_polconvert.py polconvert.xml \
 	PP/README.POLCONVERT PP/Estimate_DPFU.py PP/DPFU_scanner.py \
-	drivepclib.py solvepclib.py PP/pcvers.py
+	drivepclib.py solvepclib.py PP/pcvers.py \
+	polconvert_standalone.py polconvert_CASA.py
 
 # need to get the install first, then the local data install task
 install-data-am: install-pkgdataDATA install-data-local
