Add experimental feature to allow application of delay corrections when writing FITS files
git-svn-id: https://svn.atnf.csiro.au/difx@11039 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/difx2fits/trunk/src/Makefile.am
+++ b/applications/difx2fits/trunk/src/Makefile.am
@@ -11,6 +11,8 @@ endif
 difx2fits_SOURCES = \
 	bandpass.c \
 	bandpass.h \
+	delaycal.c \
+	delaycal.h \
 	difx2fits.c \
 	fits.c \
 	fitsHeader.c \
