Completed the test and enabled it.
git-svn-id: https://svn.atnf.csiro.au/difx@11097 9d4a3555-dc7e-4673-bb7d-d8a0b9a30876

--- a/applications/difxcalc11/trunk/Makefile.am
+++ b/applications/difxcalc11/trunk/Makefile.am
@@ -5,3 +5,8 @@ SUBDIRS= \
 DIST_SUBDIRS= \
 	src \
 	data
+
+check_SCRIPTS = check_stations.sh
+
+TESTS = check_stations.sh
+TEST_ENVIRONMENT = srcdir=$(srcdir) verbose=true
