renew the ignore rules using Regular expression

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,7 @@
+*._.DS_Store
+.deps
+Makefile.in
 
-# /applications/doi/trunk/DiFXSim/
-/applications/doi/trunk/DiFXSim/*._.DS_Store
-
-# /applications/doi/trunk/DiFXUIs/src/
-/applications/doi/trunk/DiFXUIs/src/*._.DS_Store
-
-# /applications/doi/trunk/DiFXUIs/src/edu/
-/applications/doi/trunk/DiFXUIs/src/edu/*._.DS_Store
-
-# /applications/doi/trunk/DiFXUIs/src/edu/nrao/
-/applications/doi/trunk/DiFXUIs/src/edu/nrao/*._.DS_Store
-
-# /applications/doi/trunk/DiFXUIs/src/edu/nrao/difx/
-/applications/doi/trunk/DiFXUIs/src/edu/nrao/difx/*._.DS_Store
 
 # /applications/gui/trunk/gui/
 /applications/gui/trunk/gui/build
@@ -20,17 +9,6 @@
 # /applications/gui/trunk/gui/conf/
 /applications/gui/trunk/gui/conf/.DOISystemConfig.xml.swp
 
-# /applications/gui/trunk/gui/src/
-/applications/gui/trunk/gui/src/*._.DS_Store
-
-# /applications/gui/trunk/gui/src/edu/
-/applications/gui/trunk/gui/src/edu/*._.DS_Store
-
-# /applications/gui/trunk/gui/src/edu/nrao/
-/applications/gui/trunk/gui/src/edu/nrao/*._.DS_Store
-
-# /applications/gui/trunk/gui/src/edu/nrao/difx/
-/applications/gui/trunk/gui/src/edu/nrao/difx/*._.DS_Store
 
 # /applications/gui/trunk/gui/src/edu/nrao/difx/difxview/
 /applications/gui/trunk/gui/src/edu/nrao/difx/difxview/.DiFXManagerUI.java.swp
@@ -44,14 +22,9 @@
 # /applications/gui/trunk/xmllib/
 /applications/gui/trunk/xmllib/build
 
-# /applications/guiServer/trunk/network/
-/applications/guiServer/trunk/network/.deps
-
-# /applications/guiServer/trunk/src/
-/applications/guiServer/trunk/src/.deps
 
 # /applications/mk5daemon/branches/mk6/src/
-/applications/mk5daemon/branches/mk6/src/Makefile.in
+
 /applications/mk5daemon/branches/mk6/src/mk5daemon
 /applications/mk5daemon/branches/mk6/src/Makefile
 
@@ -62,394 +35,3 @@
 # /libraries/python/trunk/difxplot/
 /libraries/python/trunk/difxplot/__pycache__
 /libraries/python/trunk/difxplot/*.*~
-/libraries/python/trunk/difxplot/Makefile.in
-
-# /master_tags/DiFX-2.2/applications/guiServer/network/
-/master_tags/DiFX-2.2/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.2/applications/guiServer/src/
-/master_tags/DiFX-2.2/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.2/libraries/python/
-/master_tags/DiFX-2.2/libraries/python/*.pyc
-/master_tags/DiFX-2.2/libraries/python/*.bak
-
-# /master_tags/DiFX-2.3/applications/guiServer/network/
-/master_tags/DiFX-2.3/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.3/applications/guiServer/src/
-/master_tags/DiFX-2.3/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.3.1/applications/guiServer/network/
-/master_tags/DiFX-2.3.1/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.3.1/applications/guiServer/src/
-/master_tags/DiFX-2.3.1/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.4/applications/guiServer/network/
-/master_tags/DiFX-2.4/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.4/applications/guiServer/src/
-/master_tags/DiFX-2.4/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.5/applications/guiServer/network/
-/master_tags/DiFX-2.5/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.5/applications/guiServer/src/
-/master_tags/DiFX-2.5/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.5.1/applications/guiServer/network/
-/master_tags/DiFX-2.5.1/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.5.1/applications/guiServer/src/
-/master_tags/DiFX-2.5.1/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.5.2/applications/guiServer/network/
-/master_tags/DiFX-2.5.2/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.5.2/applications/guiServer/src/
-/master_tags/DiFX-2.5.2/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.5.3/applications/guiServer/network/
-/master_tags/DiFX-2.5.3/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.5.3/applications/guiServer/src/
-/master_tags/DiFX-2.5.3/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.5.4/applications/guiServer/network/
-/master_tags/DiFX-2.5.4/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.5.4/applications/guiServer/src/
-/master_tags/DiFX-2.5.4/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.6/applications/guiServer/network/
-/master_tags/DiFX-2.6/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.6/applications/guiServer/src/
-/master_tags/DiFX-2.6/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.6/utilities/difxdb/
-/master_tags/DiFX-2.6/utilities/difxdb/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/comedia/
-/master_tags/DiFX-2.6/utilities/difxdb/comedia/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/comedia/resources/
-/master_tags/DiFX-2.6/utilities/difxdb/comedia/resources/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/conf/
-/master_tags/DiFX-2.6/utilities/difxdb/conf/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/database/
-/master_tags/DiFX-2.6/utilities/difxdb/database/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/difxdbExperiment/
-/master_tags/DiFX-2.6/utilities/difxdb/difxdbExperiment/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/difxdbInventory/
-/master_tags/DiFX-2.6/utilities/difxdb/difxdbInventory/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/difxdbModule/
-/master_tags/DiFX-2.6/utilities/difxdb/difxdbModule/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/difxdbParseFiles/
-/master_tags/DiFX-2.6/utilities/difxdb/difxdbParseFiles/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/difxdbTapelog/
-/master_tags/DiFX-2.6/utilities/difxdb/difxdbTapelog/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/difxqueue/
-/master_tags/DiFX-2.6/utilities/difxdb/difxqueue/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/expad/
-/master_tags/DiFX-2.6/utilities/difxdb/expad/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/getexplist/
-/master_tags/DiFX-2.6/utilities/difxdb/getexplist/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/getmodules/
-/master_tags/DiFX-2.6/utilities/difxdb/getmodules/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/getreleaselist/
-/master_tags/DiFX-2.6/utilities/difxdb/getreleaselist/Makefile.in
-
-# /master_tags/DiFX-2.6/utilities/difxdb/getslot/
-/master_tags/DiFX-2.6/utilities/difxdb/getslot/Makefile.in
-
-# /master_tags/DiFX-2.6.1/applications/guiServer/network/
-/master_tags/DiFX-2.6.1/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.6.1/applications/guiServer/src/
-/master_tags/DiFX-2.6.1/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/
-/master_tags/DiFX-2.6.1/utilities/difxdb/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/comedia/
-/master_tags/DiFX-2.6.1/utilities/difxdb/comedia/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/comedia/resources/
-/master_tags/DiFX-2.6.1/utilities/difxdb/comedia/resources/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/conf/
-/master_tags/DiFX-2.6.1/utilities/difxdb/conf/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/database/
-/master_tags/DiFX-2.6.1/utilities/difxdb/database/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/difxdbExperiment/
-/master_tags/DiFX-2.6.1/utilities/difxdb/difxdbExperiment/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/difxdbInventory/
-/master_tags/DiFX-2.6.1/utilities/difxdb/difxdbInventory/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/difxdbModule/
-/master_tags/DiFX-2.6.1/utilities/difxdb/difxdbModule/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/difxdbParseFiles/
-/master_tags/DiFX-2.6.1/utilities/difxdb/difxdbParseFiles/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/difxdbTapelog/
-/master_tags/DiFX-2.6.1/utilities/difxdb/difxdbTapelog/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/difxqueue/
-/master_tags/DiFX-2.6.1/utilities/difxdb/difxqueue/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/expad/
-/master_tags/DiFX-2.6.1/utilities/difxdb/expad/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/getexplist/
-/master_tags/DiFX-2.6.1/utilities/difxdb/getexplist/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/getmodules/
-/master_tags/DiFX-2.6.1/utilities/difxdb/getmodules/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/getreleaselist/
-/master_tags/DiFX-2.6.1/utilities/difxdb/getreleaselist/Makefile.in
-
-# /master_tags/DiFX-2.6.1/utilities/difxdb/getslot/
-/master_tags/DiFX-2.6.1/utilities/difxdb/getslot/Makefile.in
-
-# /master_tags/DiFX-2.6.2/applications/guiServer/network/
-/master_tags/DiFX-2.6.2/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.6.2/applications/guiServer/src/
-/master_tags/DiFX-2.6.2/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/
-/master_tags/DiFX-2.6.2/utilities/difxdb/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/comedia/
-/master_tags/DiFX-2.6.2/utilities/difxdb/comedia/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/comedia/resources/
-/master_tags/DiFX-2.6.2/utilities/difxdb/comedia/resources/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/conf/
-/master_tags/DiFX-2.6.2/utilities/difxdb/conf/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/database/
-/master_tags/DiFX-2.6.2/utilities/difxdb/database/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/difxdbExperiment/
-/master_tags/DiFX-2.6.2/utilities/difxdb/difxdbExperiment/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/difxdbInventory/
-/master_tags/DiFX-2.6.2/utilities/difxdb/difxdbInventory/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/difxdbModule/
-/master_tags/DiFX-2.6.2/utilities/difxdb/difxdbModule/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/difxdbParseFiles/
-/master_tags/DiFX-2.6.2/utilities/difxdb/difxdbParseFiles/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/difxdbTapelog/
-/master_tags/DiFX-2.6.2/utilities/difxdb/difxdbTapelog/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/difxqueue/
-/master_tags/DiFX-2.6.2/utilities/difxdb/difxqueue/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/expad/
-/master_tags/DiFX-2.6.2/utilities/difxdb/expad/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/getexplist/
-/master_tags/DiFX-2.6.2/utilities/difxdb/getexplist/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/getmodules/
-/master_tags/DiFX-2.6.2/utilities/difxdb/getmodules/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/getreleaselist/
-/master_tags/DiFX-2.6.2/utilities/difxdb/getreleaselist/Makefile.in
-
-# /master_tags/DiFX-2.6.2/utilities/difxdb/getslot/
-/master_tags/DiFX-2.6.2/utilities/difxdb/getslot/Makefile.in
-
-# /master_tags/DiFX-2.6.3/applications/guiServer/network/
-/master_tags/DiFX-2.6.3/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.6.3/applications/guiServer/src/
-/master_tags/DiFX-2.6.3/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/
-/master_tags/DiFX-2.6.3/utilities/difxdb/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/comedia/
-/master_tags/DiFX-2.6.3/utilities/difxdb/comedia/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/comedia/resources/
-/master_tags/DiFX-2.6.3/utilities/difxdb/comedia/resources/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/conf/
-/master_tags/DiFX-2.6.3/utilities/difxdb/conf/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/database/
-/master_tags/DiFX-2.6.3/utilities/difxdb/database/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/difxdbExperiment/
-/master_tags/DiFX-2.6.3/utilities/difxdb/difxdbExperiment/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/difxdbInventory/
-/master_tags/DiFX-2.6.3/utilities/difxdb/difxdbInventory/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/difxdbModule/
-/master_tags/DiFX-2.6.3/utilities/difxdb/difxdbModule/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/difxdbParseFiles/
-/master_tags/DiFX-2.6.3/utilities/difxdb/difxdbParseFiles/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/difxdbTapelog/
-/master_tags/DiFX-2.6.3/utilities/difxdb/difxdbTapelog/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/difxqueue/
-/master_tags/DiFX-2.6.3/utilities/difxdb/difxqueue/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/expad/
-/master_tags/DiFX-2.6.3/utilities/difxdb/expad/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/getexplist/
-/master_tags/DiFX-2.6.3/utilities/difxdb/getexplist/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/getmodules/
-/master_tags/DiFX-2.6.3/utilities/difxdb/getmodules/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/getreleaselist/
-/master_tags/DiFX-2.6.3/utilities/difxdb/getreleaselist/Makefile.in
-
-# /master_tags/DiFX-2.6.3/utilities/difxdb/getslot/
-/master_tags/DiFX-2.6.3/utilities/difxdb/getslot/Makefile.in
-
-# /master_tags/DiFX-2.7/applications/guiServer/network/
-/master_tags/DiFX-2.7/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-2.7/applications/guiServer/src/
-/master_tags/DiFX-2.7/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-2.7/utilities/difxdb/
-/master_tags/DiFX-2.7/utilities/difxdb/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/comedia/
-/master_tags/DiFX-2.7/utilities/difxdb/comedia/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/comedia/resources/
-/master_tags/DiFX-2.7/utilities/difxdb/comedia/resources/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/conf/
-/master_tags/DiFX-2.7/utilities/difxdb/conf/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/database/
-/master_tags/DiFX-2.7/utilities/difxdb/database/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/difxdbExperiment/
-/master_tags/DiFX-2.7/utilities/difxdb/difxdbExperiment/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/difxdbInventory/
-/master_tags/DiFX-2.7/utilities/difxdb/difxdbInventory/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/difxdbModule/
-/master_tags/DiFX-2.7/utilities/difxdb/difxdbModule/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/difxdbParseFiles/
-/master_tags/DiFX-2.7/utilities/difxdb/difxdbParseFiles/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/difxdbTapelog/
-/master_tags/DiFX-2.7/utilities/difxdb/difxdbTapelog/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/difxqueue/
-/master_tags/DiFX-2.7/utilities/difxdb/difxqueue/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/expad/
-/master_tags/DiFX-2.7/utilities/difxdb/expad/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/getexplist/
-/master_tags/DiFX-2.7/utilities/difxdb/getexplist/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/getmodules/
-/master_tags/DiFX-2.7/utilities/difxdb/getmodules/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/getreleaselist/
-/master_tags/DiFX-2.7/utilities/difxdb/getreleaselist/Makefile.in
-
-# /master_tags/DiFX-2.7/utilities/difxdb/getslot/
-/master_tags/DiFX-2.7/utilities/difxdb/getslot/Makefile.in
-
-# /master_tags/DiFX-RA-1.0.0/applications/guiServer/network/
-/master_tags/DiFX-RA-1.0.0/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-RA-1.0.0/applications/guiServer/src/
-/master_tags/DiFX-RA-1.0.0/applications/guiServer/src/.deps
-
-# /master_tags/DiFX-RA-1.0.1/applications/guiServer/network/
-/master_tags/DiFX-RA-1.0.1/applications/guiServer/network/.deps
-
-# /master_tags/DiFX-RA-1.0.1/applications/guiServer/src/
-/master_tags/DiFX-RA-1.0.1/applications/guiServer/src/.deps
-
-# /utilities/trunk/difxdb/
-/utilities/trunk/difxdb/Makefile.in
-
-# /utilities/trunk/difxdb/comedia/
-/utilities/trunk/difxdb/comedia/Makefile.in
-
-# /utilities/trunk/difxdb/comedia/resources/
-/utilities/trunk/difxdb/comedia/resources/Makefile.in
-
-# /utilities/trunk/difxdb/conf/
-/utilities/trunk/difxdb/conf/Makefile.in
-
-# /utilities/trunk/difxdb/database/
-/utilities/trunk/difxdb/database/Makefile.in
-
-# /utilities/trunk/difxdb/difxdbExperiment/
-/utilities/trunk/difxdb/difxdbExperiment/Makefile.in
-
-# /utilities/trunk/difxdb/difxdbInventory/
-/utilities/trunk/difxdb/difxdbInventory/Makefile.in
-
-# /utilities/trunk/difxdb/difxdbModule/
-/utilities/trunk/difxdb/difxdbModule/Makefile.in
-
-# /utilities/trunk/difxdb/difxdbParseFiles/
-/utilities/trunk/difxdb/difxdbParseFiles/Makefile.in
-
-# /utilities/trunk/difxdb/difxdbTapelog/
-/utilities/trunk/difxdb/difxdbTapelog/Makefile.in
-
-# /utilities/trunk/difxdb/difxqueue/
-/utilities/trunk/difxdb/difxqueue/Makefile.in
-
-# /utilities/trunk/difxdb/expad/
-/utilities/trunk/difxdb/expad/Makefile.in
-
-# /utilities/trunk/difxdb/getexplist/
-/utilities/trunk/difxdb/getexplist/Makefile.in
-
-# /utilities/trunk/difxdb/getmodules/
-/utilities/trunk/difxdb/getmodules/Makefile.in
-
-# /utilities/trunk/difxdb/getreleaselist/
-/utilities/trunk/difxdb/getreleaselist/Makefile.in
-
-# /utilities/trunk/difxdb/getslot/
-/utilities/trunk/difxdb/getslot/Makefile.in
-
-# /virtualtrunk/
