--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 *._.DS_Store
 .deps
 Makefile.in
+*~
 
 
 # /applications/gui/trunk/gui/
@@ -43,41 +44,41 @@ Makefile.in
 # http://www.gnu.org/software/automake
 
 Makefile.in
-/ar-lib
-/mdate-sh
-/py-compile
-/test-driver
-/ylwrap
+ar-lib
+mdate-sh
+py-compile
+test-driver
+ylwrap
 .deps/
 .dirstamp
 
 # http://www.gnu.org/software/autoconf
 
 autom4te.cache
-/autoscan.log
-/autoscan-*.log
-/aclocal.m4
-/compile
-/config.cache
-/config.guess
-/config.h.in
-/config.log
-/config.status
-/config.sub
-/configure
-/configure.scan
-/depcomp
-/install-sh
-/missing
-/stamp-h1
+autoscan.log
+autoscan-*.log
+aclocal.m4
+compile
+config.cache
+config.guess
+config.h.in
+config.log
+config.status
+config.sub
+configure
+configure.scan
+depcomp
+install-sh
+missing
+stamp-h1
 
 # https://www.gnu.org/software/libtool/
 
-/ltmain.sh
+ltmain.sh
 
 # http://www.gnu.org/software/texinfo
 
-/texinfo.tex
+texinfo.tex
 
 # http://www.gnu.org/software/m4/
 
