ignoring libtool things, COPY/INS in vis2sc

--- a/.gitignore
+++ b/.gitignore
@@ -82,11 +82,11 @@ texinfo.tex
 
 # http://www.gnu.org/software/m4/
 
-m4/libtool.m4
-m4/ltoptions.m4
-m4/ltsugar.m4
-m4/ltversion.m4
-m4/lt~obsolete.m4
+libtool.m4
+ltoptions.m4
+ltsugar.m4
+ltversion.m4
+lt~obsolete.m4
 
 # Generated Makefile
 # (meta build system like autotools,
