--- a/applications/hops/chops/source/python_src/tests/Makefile.am
+++ b/applications/hops/chops/source/python_src/tests/Makefile.am
@@ -2,7 +2,8 @@
 # $Id$
 #
 
-EXTRA_DIST = 3593.tar.gz 3593.tvf.gz
+# EXTRA_DIST = 3593.tar.gz 3593.tvf.gz
+EXTRA_DIST = 3593.tvf.gz
 
 dist_pkgdata_DATA = $(EXTRA_DIST)
 
@@ -12,6 +13,7 @@ dist_check_SCRIPTS = test_harness.sh test_mk4b.py \
 if HAVE_PYTHON_EXTRA
 
 TESTS = test_harness.sh
+XFAIL_TESTS = test_harness.sh
 CLEANFILES = *.pc *.pyc *.tar.gz
 
 else
