New simplified utility for generating Mark6 filelist files

--- a/applications/vex2difx/utilities/Makefile.am
+++ b/applications/vex2difx/utilities/Makefile.am
@@ -1,17 +1,7 @@
 
-#===========================================================================
-# SVN properties (DO NOT CHANGE)
-#
-# $Id: Makefile.am 9172 2019-09-19 12:21:16Z ChrisPhillips $
-# $HeadURL: $
-# $LastChangedRevision: 9172 $
-# $Author: ChrisPhillips $
-# $LastChangedDate: 2019-09-19 20:21:16 +0800 (四, 2019-09-19) $
-#
-#============================================================================
-
 dist_bin_SCRIPTS = \
 	difxspeed \
 	oms2v2d \
 	vlog \
+	mk6filelist \
 	mk62v2d
