difx2fits: Add new SnifferOption structure and add option to set the interval between sniffer bandpass solutions.

--- a/applications/difx2fits/src/Makefile.am
+++ b/applications/difx2fits/src/Makefile.am
@@ -42,6 +42,8 @@ difx2fits_SOURCES = \
 	other.h \
 	jobmatrix.c \
 	jobmatrix.h \
+	snifferoptions.c \
+	snifferoptions.h \
 	util.c \
 	util.h \
 	$(fftw_sources)
