Added new utility invalidateVDIFPackets to set some fraction of a file to invalid

--- a/libraries/vdifio/utils/Makefile.am
+++ b/libraries/vdifio/utils/Makefile.am
@@ -11,6 +11,7 @@ bin_PROGRAMS = \
 	captureUDPVDIF \
 	multi2singlethreadVDIF \
 	padVDIF \
+    invalidateVDIFPackets \
 	cleanVDIF \
 	reorderVDIF \
 	fakemultiVDIF \
@@ -89,6 +90,9 @@ countVDIFPackets_SOURCES = \
 
 padVDIF_SOURCES = \
 	padVDIF.c
+
+invalidateVDIFPackets_SOURCES = \
+    invalidateVDIFPackets.c
 
 extractSingleVDIFThread_SOURCES = \
 	extractSingleVDIFThread.c
