add .difx plotter utility plotFringeSpectrum.py

--- a/utilities/vis2screen/Makefile.am
+++ b/utilities/vis2screen/Makefile.am
@@ -5,7 +5,8 @@ dist_bin_SCRIPTS = diffDiFX.py diffDiFX2.py checkDiFXViz.py plotDiFX.py \
 	plotDiFXPCal.py fringeFindDiFX.py plotDynamicSpectrum.py snipDiFX.py \
 	plotResidualSpectrum.py polswapDiFX.py polrelabelDiFX.py stripantennaDiFX.py \
 	printDiFX.py printDiFXInput.py printDiFXPCal.py replaceAntennaDiFX.py \
-	removeNonzoomAutosDiFX.py removeZerovalAutoDiFX.py plotDiFXLogs.py
+	removeNonzoomAutosDiFX.py removeZerovalAutoDiFX.py plotDiFXLogs.py \
+	plotFringeSpectrum.py
 
 AM_CXXFLAGS = $(DIFXMESSAGE_CFLAGS) $(FXCORR_CFLAGS) $(IPP_CFLAGS) 
 printDiFX_SOURCES = printDiFX.cpp
