Remove SVN headers, fix some spelling, update rpm manifest

--- a/libraries/vdifio/vlbi-vdifio.spec.in
+++ b/libraries/vdifio/vlbi-vdifio.spec.in
@@ -57,6 +57,10 @@ make
 %{_bindir}/vdifspec
 %{_bindir}/vdiffold
 %{_bindir}/vdifbstate
+%{_bindir}/vdifMeanRMS
+%{_bindir}/vdifPhase
+%{_bindir}/vdifStateCount
+%{_bindir}/vdifpcal
 %{_bindir}/printVDIFgaps
 %{_bindir}/vdifChanSelect
 %{_bindir}/checkVDIF
